first cut to move to BS 4.0

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,80 +1,76 @@
-<div class="relative full-height">
-	<div class="center-block">
-		<img src="/assets/images/profile.jpg" alt="Sandeep Gupta" class="img-circle img-responsive profile-image" >
-		
-		<div class="sidebar-main-link">
-			<a href="/tech/index.html">Keep Walking</a>
-			<span class="side-kick">all about engineering</span>
-			<span class="side-kick"><a href="/tech/archive.html">Archive</a> | <a href="/tech.rss">RSS</a></span>
-		</div>
-		
-		<div class="sidebar-main-link">
-			<a href="/poetry/index.html">Poet Inside</a>
-			<span class="side-kick">poems, by me!</span>
-			<span class="side-kick"><a href="/poetry/archive.html">Archive</a> | <a href="/poetry.rss">RSS</a></span>
-		</div>
+<img src="/assets/images/profile.jpeg" alt="Sandeep Gupta" class='rounded-circle profile-image'>
 
-		<div class="sidebar-main-link">
-			<a href="/coding-challenges.html">Coding Challenges</a>
-			<span class="side-kick">ones I could complete</span>
-		</div>
+<div class="sidebar-main-link">
+	<a href="/tech/index.html">Keep Walking</a>
+	<div class="side-kick">all about engineering</div>
+	<div class="side-kick"><a href="/tech/archive.html">Archive</a> | <a href="/tech.rss">RSS</a></div>
+</div>
 
-		<div class="sidebar-main-link">
-			<a href="/open-source.html">Open Source</a>
-			<span class="side-kick">some ready-to-use</span>
-			<span class="side-kick">some in infancy</span>
-		</div>
+<div class="sidebar-main-link">
+	<a href="/poetry/index.html">Poet Inside</a>
+	<div class="side-kick">poems, by me!</div>
+	<div class="side-kick"><a href="/poetry/archive.html">Archive</a> | <a href="/poetry.rss">RSS</a></div>
+</div>
 
-		<div class="social-links sidebar-main-link">
-			<a class="fa-stack fa-lg" href="https://www.facebook.com/sandy.pec" target="_blank">
-				<i class="fa fa-circle fa-stack-2x"></i>
-				<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-			</a>
-			<a class="fa-stack fa-lg" href="https://plus.google.com/u/0/110645714607919970386" target="_blank">
-				<i class="fa fa-circle fa-stack-2x"></i>
-				<i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
-			</a>
-			<a class="fa-stack fa-lg" href="https://twitter.com/sangupta" target="_blank">
-				<i class="fa fa-circle fa-stack-2x"></i>
-				<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-			</a>
+<div class="sidebar-main-link">
+	<a href="/coding-challenges.html">Coding Challenges</a>
+	<div class="side-kick">ones I could complete</div>
+</div>
 
-			<br>
+<div class="sidebar-main-link">
+	<a href="/open-source.html">Open Source</a>
+	<div class="side-kick">some ready-to-use</div>
+	<div class="side-kick">some in infancy</div>
+</div>
 
-			<a class="fa-stack fa-lg" href="https://github.com/sangupta" target="_blank">
-				<i class="fa fa-circle fa-stack-2x"></i>
-				<i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
-			</a>
-			<a class="fa-stack fa-lg" href="http://in.linkedin.com/in/sandypec" target="_blank">
-				<i class="fa fa-circle fa-stack-2x"></i>
-				<i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-			</a>
-			<a class="fa-stack fa-lg" href="http://www.flickr.com/photos/sangupta" target="_blank">
-				<i class="fa fa-circle fa-stack-2x"></i>
-				<i class="fa fa-flickr fa-stack-1x fa-inverse"></i>
-			</a>
+<div class="social-links sidebar-main-link">
+	<a class="fa-stack fa-lg" href="https://www.facebook.com/sandy.pec" target="_blank">
+		<i class="fa fa-circle fa-stack-2x"></i>
+		<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+	</a>
+	<a class="fa-stack fa-lg" href="https://plus.google.com/u/0/110645714607919970386" target="_blank">
+		<i class="fa fa-circle fa-stack-2x"></i>
+		<i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
+	</a>
+	<a class="fa-stack fa-lg" href="https://twitter.com/sangupta" target="_blank">
+		<i class="fa fa-circle fa-stack-2x"></i>
+		<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+	</a>
 
-			<br>
+	<br>
 
-			<a class="fa-stack fa-lg" href="http://bitbucket.org/sangupta" target="_blank">
-				<i class="fa fa-circle fa-stack-2x"></i>
-				<i class="fa fa-bitbucket fa-stack-1x fa-inverse"></i>
-			</a>
-			<a class="fa-stack fa-lg" href="https://news.ycombinator.com/user?id=sangupta" target="_blank">
-				<i class="fa fa-circle fa-stack-2x"></i>
-				<i class="fa fa-hacker-news fa-stack-1x fa-inverse"></i>
-			</a>
-			<a class="fa-stack fa-lg" href="https://instagram.com/sandypec" target="_blank">
-				<i class="fa fa-circle fa-stack-2x"></i>
-				<i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
-			</a>
-		</div>
+	<a class="fa-stack fa-lg" href="https://github.com/sangupta" target="_blank">
+		<i class="fa fa-circle fa-stack-2x"></i>
+		<i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
+	</a>
+	<a class="fa-stack fa-lg" href="http://in.linkedin.com/in/sandypec" target="_blank">
+		<i class="fa fa-circle fa-stack-2x"></i>
+		<i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+	</a>
+	<a class="fa-stack fa-lg" href="http://www.flickr.com/photos/sangupta" target="_blank">
+		<i class="fa fa-circle fa-stack-2x"></i>
+		<i class="fa fa-flickr fa-stack-1x fa-inverse"></i>
+	</a>
 
-		<div class="social-links sidebar-main-link">
-			<a class="fa-stack fa-lg" href="/blog.rss">
-				<i class="fa fa-circle fa-stack-2x"></i>
-				<i class="fa fa-rss fa-stack-1x fa-inverse"></i>
-			</a>
-		</div>
-	</div>
+	<br>
+
+	<a class="fa-stack fa-lg" href="http://bitbucket.org/sangupta" target="_blank">
+		<i class="fa fa-circle fa-stack-2x"></i>
+		<i class="fa fa-bitbucket fa-stack-1x fa-inverse"></i>
+	</a>
+	<a class="fa-stack fa-lg" href="https://news.ycombinator.com/user?id=sangupta" target="_blank">
+		<i class="fa fa-circle fa-stack-2x"></i>
+		<i class="fa fa-hacker-news fa-stack-1x fa-inverse"></i>
+	</a>
+	<a class="fa-stack fa-lg" href="https://instagram.com/sandypec" target="_blank">
+		<i class="fa fa-circle fa-stack-2x"></i>
+		<i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+	</a>
+</div>
+
+<div class="social-links sidebar-main-link">
+	<a class="fa-stack fa-lg" href="/blog.rss">
+		<i class="fa fa-circle fa-stack-2x"></i>
+		<i class="fa fa-rss fa-stack-1x fa-inverse"></i>
+	</a>
 </div>
