--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,15 +1,15 @@
 <!-- Start of StatCounter Code -->
-<script type='text/javascript'> 
+<!-- <script type='text/javascript'> 
 var sc_project=2308708; 
 var sc_invisible=0; 
 var sc_partition=21; 
 var sc_security="2aa37af0"; 
 </script>
 <script src='http://www.statcounter.com/counter/counter_xhtml.js' type='text/javascript'></script><noscript><div class='statcounter'><a class='statcounter' href='http://www.statcounter.com/'><img alt='web metrics' class='statcounter' src='http://c22.statcounter.com/2308708/0/2aa37af0&#10;&#10;/0/'/></a></div></noscript>
-<!-- End of StatCounter Code -->
+ --><!-- End of StatCounter Code -->
 
 <!-- Start of Google Analytics code -->
-<script>
+<!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -18,4 +18,5 @@ var sc_security="2aa37af0";
   ga('create', 'UA-1187941-2', 'auto');
   ga('send', 'pageview');
 </script>
-<!-- End of Google Analytics code -->
+ --><!-- End of Google Analytics code -->
+ 
