--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,18 +1,14 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">sangupta</a>
-    </div>
-    <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="/blogs.html">Blogs</a></li>
-        <li><a href="/projects/index.html">Projects</a></li>
-        <li><a href="/projects/index.html#experiments">Experiments</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-		<li><a href="/resume.html">R&eacute;sum&eacute;</a></li>
-        <li><a href="/about.html">About Me</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<header>
+  <nav class="navbar navbar-default fixed-top navbar-expand-lg" role="navigation">
+    <a class="navbar-brand" href="/">sangupta</a>
+    <ul class="nav navbar-nav">
+      <li><a href="/blogs.html">Blogs</a></li>
+      <li><a href="/projects/index.html">Projects</a></li>
+      <li><a href="/projects/index.html#experiments">Experiments</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+  		<li><a href="/resume.html">R&eacute;sum&eacute;</a></li>
+      <li><a href="/about.html">About Me</a></li>
+    </ul>
+  </nav>
+</header>
