--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,13 +49,13 @@
     {% endif %}
     <meta name="twitter:app:country" content="IN" />
 
-    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/assets/css/syntax.css"/>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/assets/css/sangupta.css"/>
 
     <!-- load google fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -66,34 +66,32 @@
 <body>
     {% include navbar.html %}
 
-    <div class="container-fluid full-height">
+    <main class="container-fluid">
         <div class="row">
-            <div class="col-sm-3 col-md-2 sidebar">
+            <div class="col-sm-3 col-md-2 sidebar text-center">
                 {% include sidebar.html %}
             </div>
-            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            <div class="col content-pane">
                 {{ content }}
             </div>
         </div>
-    </div>
+    </main>
 
-    <footer class="footer col-md-offset-2 col-sm-offset-3">
-      <div class="container-fluid">
-        <p>
-            Copyright &copy; 2006-2018, Sandeep Gupta.
-            <br>
-            All code is Apache Licensed, unless otherwise noted.
-        </p>
+    <footer class="footer">
+      <div class="text-center text-muted">
+        Copyright &copy; 2006-2018, Sandeep Gupta.
+        <br>
+        All code is Apache Licensed, unless otherwise noted.
       </div>
     </footer>
 
 	<!-- Latest compiled and minified JavaScript -->
-    <script src="/assets/js/jquery-2.1.1.min.js" type="text/javascript"></script>
+<!--     <script src="/assets/js/jquery-2.1.1.min.js" type="text/javascript"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="/assets/js/sangupta.js" type="text/javascript"></script>
     <script src='https://apis.google.com/js/plusone.js' type='text/javascript'></script>
     <script src='https://static.ak.fbcdn.net/connect.php/js/FB.Share' type='text/javascript'></script>
-
+ -->
     <!-- Check for page specific javascripts -->
     {% if page.js_onload %}
         <script>
