--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -1,293 +1,108 @@
-html {
-  height: 100%;
+html, body, .h100 {
+    height: 100%;
 }
 body {
-  padding-top: 50px;
-  height: 100%;
-  font-family: Merriweather, Georgia, 'Times New Roman', serif;
-}
-h1, h2, h3 {
-  margin-top: 25px;
-}
-h4 {
-  font-size: 20px;
-  font-weight: 400;
-}
-h5 {
-  font-size: 18px;
-  font-weight: 400;
-}
-h6 {
-  font-size: 16px;
-  font-weight: 400;
-}
-code {
-  color: #777;
-  background-color: #f5f5f5;
-}
-.pad-top-20 {
-  padding-top: 20px;
-}
-.pad-left-20 {
-  padding-left: 20px;
-}
-.sidebar {
-  display: none;
-}
-@media (min-width: 768px) {
-  .sidebar {
-    position: fixed;
-    top: 51px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    display: block;
-    padding: 20px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    background-color: #f5f5f5;
-    border-right: 1px solid #ddd;
-  }
-}
-.nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
-  margin-bottom: 20px;
-  margin-left: -20px;
-}
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-}
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-  color: #fff;
-  background-color: #428bca;
+    font-family: Roboto, sans-serif;
 }
 main {
-  padding: 20px;
-  padding-top: 0;
+    min-height: 100%;
 }
-@media (min-width: 768px) {
-  .main {
-    padding-right: 40px;
-    padding-left: 40px;
-  }
-}
-.main .page-header {
-  margin-top: 0;
-}
-.main {
-  background-color: white;
-  min-height: 500px;
-}
-.main p {
-  margin-bottom: 10px;
-}
-.monoDate {
-  font-family: Monaco, "Courier New", monospace;
-  font-size: 14px;
-}
-.main {
-  font-size: 18px;
-  font-weight: 300;
-  line-height: 32px;
-}
-.main pre {
-  line-height: 22px;
-  margin-bottom: 30px;
-  font-size: 14px;
-}
-.main h1 {
-  line-height: 54px;
-  font-size: 36px;
-  text-align: center;
-}
-.main h2 {
-  font-size: 32px;
-  font-weight: 400;
-  border-bottom: 1px solid #eee;
-}
-.post-content p, .page-content p {
-  /*padding-top: 30px;*/
-}
-li p {
-  padding-top: 0 !important;
-}
-body {
-  background-image: url("/assets/images/bg.png");
-  background-repeat: repeat;
-}
-.relative {
-  position: relative;
-}
-.full-height {
-  height: 100%;
-}
-.bottom {
-  position: absolute;
-  bottom: 0;
-}
-.footer {
-  font-size: 10px;
-  padding-top: 20px;
-  background-color: #f5f5f5;
-  color: #777;
-  line-height: 20px;
-}
-.footer p {
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
-.social-links {
-  font-size: 20px;
-}
-.sidebar-main-link {
-  display: block;
-  padding-top: 10px;
-  text-align: center;
-  margin-top: 10px;
-}
-.readMore {
-  font-style: italic;
-}
-.side-kick {
-  display: block;
-  font-size: 12px;
-}
-a.fa-lg {
-  cursor: pointer;
-}
-.profile-image {
-  padding:0;
-  margin:0 auto;
-  width: 120px;
-}
-.post {
-  padding-top: 25px;
-}
-.full-height {
-  height: 100%;
-  min-height: 100%;
-}
-.archive .row {
-  padding-top: 10px;
-}
-table {
-  border: 1px solid #ddd;
-  max-width: 100%;
-  margin-bottom: 20px;
-  background-color: transparent;
-  border-spacing: 0;
-  border-collapse: collapse;
-  display: table;
-}
-table>tbody>tr:nth-child(odd) {
-  background-color: #f9f9f9;
-}
-table>thead>tr>th, table>tbody>tr>th, table>tfoot>tr>th, table>thead>tr>td, table>tbody>tr>td, table>tfoot>tr>td {
-  padding: 8px;
-  line-height: 1.42857143;
-  vertical-align: top;
-  border-top: 1px solid #ddd;
-}
-table>caption+thead>tr:first-child>th, table>colgroup+thead>tr:first-child>th, table>thead:first-child>tr:first-child>th, table>caption+thead>tr:first-child>td, .table>colgroup+thead>tr:first-child>td, .table>thead:first-child>tr:first-child>td {
-  border-top: 0;
-}
-table>thead>tr>th, table>thead>tr>td {
-  border-bottom-width: 2px;
-}
-table>thead>tr>th, table>tbody>tr>th, table>tfoot>tr>th, table>thead>tr>td, table>tbody>tr>td, table>tfoot>tr>td {
-  border: 1px solid #ddd;
-}
-code.language-text {
-  color: #333;
-}
-.poetry pre, .poetry pre code {
-  background-color: transparent !important;
-  color: #333;
-  border: none !important;
-  padding: 0;
-  margin: 0;
-  font-family: Merriweather, Georgia, 'Times New Roman', serif;
-  font-size: 16px;
-  line-height: 28px;
-  margin-top: 30px;
-}
-.statcounter {
-  display: none;
-}
-.flexbox {
-  display: flex;
-}
-.fb-share-button {
-  padding-left: 20px;
+pre, pre code, code {
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 300;
 }
 a {
-  font-weight: 400;
+    color: rgb(65, 132, 243);
 }
-.post-title {
-  margin-bottom: 30px;
+a:hover {
+    text-decoration: none;
 }
-.post-time {
-  font-size: 24px;
+.profile-image {
+    width: 128px;
+    height: 128px;
 }
-.archive {
-  font-size: 16px;
+header nav {
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #e7e7e7;
 }
-.archive a {
-  font-weight: 300 !important;
+.sidebar {
+    background-color: #f5f5f5;
+    border-right: 1px solid #e7e7e7;
+    padding-top: 24px;
 }
-.highlight {
-  padding: 20px;
+footer {
+    font-size: 12px;
+    line-height: 24px;
+    background-color: #f5f5f5;
+    border-top: 1px solid #e5e5e5;
+    padding: 8px 0;
 }
-.post-description p {
-  margin-bottom: 10px;
+main {
+    margin-top: 56px;
 }
-.post-description h1 {
-  font-size: 28px;
-  text-align: left;
+.sidebar-main-link {
+    padding-top: 24px;
 }
-.post-description h2 {
-  font-size: 24px;
-  border: none;
-  margin-bottom: 15px;
+.content-pane {
+    padding-top: 40px;
+    padding-bottom: 60px;
 }
-.post-description h3 {
-  font-size: 20px;
-  text-align: left;
+pre {
+    background-color: #f9f9f9;
+    padding: 20px;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 14px;
+    line-height: 24px;
+    margin-left: 25px;
+    border-radius: 5px;
+    border: 1px solid #e5e5e5;
+    color: #666;
+    font-weight: 300;
 }
-article.one-poem:after, section.post:after, hr:after {
-  background-image: url(/assets/images/divider.png);
-  background-position: center top;
-  background-repeat: no-repeat;
-  clear: both;
-  content: "";
-  display: block;
-  margin: 59.4px 0;
-  width: 100%;
-  height: 40px;
+.post {
+    border-bottom: 1px solid;
+    margin-bottom: 25px;
+    padding-bottom: 25px;
+    color: #e5e5e5;
+    padding-left: 20px;
 }
-
-hr {
-  border-top: 0;
-  height: 60px;
+.post-title a {
+    color: rgb(65, 132, 243);
+    font-size: 30px;
+    font-weight: 400;
+    text-decoration: none;
 }
-ul.projectList li {
-  margin: 10px 0;
+.post-title a:hover {
+    color: rgb(64,64,64);
 }
-
-iframe {
-  width: 100%;
-  height: 100%;
-  border: 1px solid;
+.post-date {
+    font-style: italic;
+    color: rgb(128, 128, 128);
+    font-size: 18px;
 }
-textarea {
-  font-size: 12px;
-  line-height: 20px;
-  font-weight: normal;
-  font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+.post-content {
+    font-size: 17px;
+    line-height: 32px;
+    color: rgba(0, 0, 0, 0.87);
+    margin-top: 40px;
 }
-.alert-info a {
-  color: #6495ed;
+.post-content h1 {
+    font-size: 26px;
+    line-height: 40px;
+}
+.post-content h2 {
+    font-size: 22px;
+    line-height: 36px;
+}
+.post-content h3 {
+    font-size: 18px;
+    line-height: 32px;
+}
+.post-content h4 {
+    font-size: 16px;
+    line-height: 26px;
+}
+code {
+    font-weight: bold;
+    color: rgba(0,0,0,0.9);
 }
