--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,93 +4,30 @@ layout: default
 
 {% assign post = page %}
 
-<div class="row">
-    <div class="col-md-12">
-        <article>
-            <header id="post-header">
-                <div class="row">
-                    <div class="col-md-9">
-                        <h1 id="post-title">{{ post.title }}</h1>
-                        <h4 id="post-subtitle text-muted">
-                            <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%b. %d, %Y' }}</time>
-                        </h4>
-                    </div>
-                    <div class="col-md-3 pad-top-20">
-                        <div class="pull-right flexbox">
-                            {% if post.sharingURL %}
-                                <g:plusone href='{{ post.sharingURL }}' size='tall'></g:plusone>
+{% include onepost.html %}
 
-                                <a href='http://www.facebook.com/sharer.php?u={{ post.sharingURL }}&t={{ post.title }}' name='fb_share' type='box_count'>Share</a>
-                            {% else %}
-                                <g:plusone href='{{ post.permalink }}' size='tall'></g:plusone>
+<nav>
+    <ul class="pagination justify-content-center">
+        {% if page.previous.url %}
+        <li class="page-item">
+            <a class='page-link' href="{{page.previous.url}}">
+                <span aria-hidden="true">&larr;</span> {{page.previous.title}}
+            </a>
+        </li>
+        {% endif %}
 
-                                <a href='http://www.facebook.com/sharer.php?u={{ post.permalink }}&t={{ post.title }}' name='fb_share' type='box_count'>Share</a>
-                            {% endif %}
+        <li class='page-item disabled'>
+            <span style='width: 100px'></span>
+        </li>
 
-                        </div>
-                    </div>
-                </div>
-            </header>
+        {% if page.next.url %}
+        <li class="page-item">
+            <a class='page-link' href="{{page.next.url}}">
+                {{page.next.title}} <span aria-hidden="true">&rarr;</span>
+            </a>
+        </li>
+        {% endif %} 
+    </ul>
+</nav>
 
-            <div id="post-content" class="post-content">
-                {% if post.category == 'poetry' %}
-                    <div class="poetry">
-                {% endif %}
-
-                {{ content | remove: '<p></p>' }}
-
-                {% if post.category == 'poetry' %}
-                    </div>
-                {% endif %}
-
-                {% if post.tags.size > 0 %}
-                    {% capture tags_content %} with {% if post.tags.size == 1 %}<i class="fa fa-tag"></i>{% else %}<i class="fa fa-tags"></i>{% endif %}: {% endcapture %}
-                    {% for post_tag in post.tags %}
-                        {% for data_tag in site.data.tags %}
-                            {% if data_tag.slug == post_tag %}
-                                {% assign tag = data_tag %}
-                            {% endif %}
-                        {% endfor %}
-                        {% if tag %}
-                            {% capture tags_content_temp %}{{ tags_content }}<a href="/blog/tag/{{ tag.slug }}">{{ tag.name }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
-                            {% assign tags_content = tags_content_temp %}
-                        {% endif %}
-                    {% endfor %}
-                {% else %}
-                    {% assign tags_content = '' %}
-                {% endif %}
-
-                {% if tags_content != '' %}
-                    <p id="post-meta">Posted {{ tags_content }}</p>
-                {% endif %}
-            </div>
-        </article>
-
-        <nav>
-            <ul class="pager">
-                {% if page.previous.url %}
-                <li class="previous">
-                    <a href="{{page.previous.url}}">
-                        <span aria-hidden="true">&larr;</span> {{page.previous.title}}
-                    </a>
-                </li>
-                {% endif %}
-
-                {% if page.next.url %}
-                <li class="next">
-                    <a href="{{page.next.url}}">
-                        {{page.next.title}} <span aria-hidden="true">&rarr;</span>
-                    </a>
-                </li>
-                {% endif %} 
-            </ul>
-        </nav>
-
-        <div id="disqus_thread"></div>
-    </div>
-    <!--
-    <div class="col-md-3">
-        {% include post-sidebar.html %}
-    </div>
-    -->
-</div>
+<div id="disqus_thread"></div>
