--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,14 +1,14 @@
 <header>
   <nav class="navbar navbar-default fixed-top navbar-expand-lg" role="navigation">
     <a class="navbar-brand" href="/">sangupta</a>
-    <ul class="nav navbar-nav">
-      <li><a href="/blogs.html">Blogs</a></li>
-      <li><a href="/projects/index.html">Projects</a></li>
-      <li><a href="/projects/index.html#experiments">Experiments</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-  		<li><a href="/resume.html">R&eacute;sum&eacute;</a></li>
-      <li><a href="/about.html">About Me</a></li>
-    </ul>
+    <div class="navbar-nav mr-auto">
+      <a class='nav-item nav-link' href="/blogs.html">Blogs</a>
+      <a class='nav-item nav-link' href="/projects/index.html">Projects</a>
+      <a class='nav-item nav-link' href="/projects/index.html#experiments">Experiments</a>
+    </div>
+    <div class="navbar-nav navbar-right ml-auto">
+  		<a class='nav-item nav-link' href="/resume.html">R&eacute;sum&eacute;</a>
+      <a class='nav-item nav-link' href="/about.html">About Me</a>
+    </div>
   </nav>
 </header>
