--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,8 @@
 
     <!-- load google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Macondo" rel="stylesheet">
+    
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
