--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-default fixed-top navbar-expand-lg" role="navigation">
-    <a class="navbar-brand" href="/">sangupta</a>
+    <a class="navbar-brand col-md-2 text-center" href="/">sangupta</a>
     <div class="navbar-nav mr-auto">
       <a class='nav-item nav-link' href="/blogs.html">Blogs</a>
       <a class='nav-item nav-link' href="/projects/index.html">Projects</a>
