--- a/assets/css/sangupta.css
+++ b/assets/css/sangupta.css
@@ -126,3 +126,20 @@ code {
 .navbar-brand {
     color: #666;
 }
+@media (max-width: 992px) {
+    main {
+        margin-top: 137px;
+    }
+    .content-pane {
+        margin-right: 0;
+    }
+    .profile-image {
+        width: 64px;
+        height: 64px;
+    }
+}
+@media (max-width: 768px) {
+    main {
+        margin-top: 177px;
+    }
+}
