--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -9,7 +9,7 @@ var sc_security="2aa37af0";
  --><!-- End of StatCounter Code -->
 
 <!-- Start of Google Analytics code -->
-<!-- <script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -18,5 +18,5 @@ var sc_security="2aa37af0";
   ga('create', 'UA-1187941-2', 'auto');
   ga('send', 'pageview');
 </script>
- --><!-- End of Google Analytics code -->
+<!-- End of Google Analytics code
  
