fix reading panel responsive issue

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,7 @@
             <div class="col-sm-3 col-md-2 sidebar text-center d-none d-md-block">
                 {% include sidebar.html %}
             </div>
-            <div class="col content-pane">
+            <div class="col col-md-10 col-lg-10 content-pane">
                 {{ content }}
             </div>
         </div>
