--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,6 +86,8 @@
         Copyright &copy; 2006-2018, Sandeep Gupta.
         <br>
         All code is Apache Licensed, unless otherwise noted.
+        <br>
+        <a href='/sitemap.html'>sitemap</a>
       </div>
     </footer>
 
