--- a/_includes/blogs.html
+++ b/_includes/blogs.html
@@ -1,33 +1,21 @@
-<h3>
-	<a href="/tech/index.html">Keep Walking!</a>
-</h3>
+<h3><a href='/tech/index.html'>Keep Walking!</a></h3>
 
-<p>
 As a river meanders between various lands and creates a course, learning many a things; this 
 blog is a reflection of my musings during my ride in the roller-coaster called <b>code</b>.
-</p>
-<p>
 <b>Keep Walking</b> is a collection of all my learnings I have gained as a software developer
 over the many years. It also is a repo of all the code snippets, open-source frameworks that I
 have created over time.
-</p>
 
-<h3>
-	<a href="/poetry/index.html">Poet Inside</a>
-</h3>
+<br><br>
+<h3><a href='/poetry/index.html'>Poet Inside</a></h3>
 
-<p>
 The music of language, intricate rhyme schemes, elegant phrases, vivid images - the art of 
 poetry is enough to inspire many to write it. Poetry is the practice of creating artworks using 
 language. What could be a better way than discovering the music inside yourself than Poetry? 
 Words are the soul of any rythm, any sort of music.
-</p>
 
-<h3>
-	<a href="http://goodtoknowit.blogspot.com/" target="_blank">Thought Process - Good to know It</a>
-</h3>
+<br><br>
+<h3><a href='http://goodtoknowit.blogspot.com'>Thought Process - Good to know It</a></h3>
 
-<p>
 A blog about invoking the though process by looking at various puzzles - started by a dear friend, but
 more or less dead now.
-</p>
