load font weights

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/sangupta.css"/>
 
     <!-- load google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,800|Roboto+Mono:300,400,700,800" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
